--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -148,7 +148,6 @@
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;"><span>針對福利項目，有彈性設置申請表單。</span></div>
                                 <div class="pup_normal_text" style="margin-bottom:20px;"><span>為滿足這方面需求，並降低製作成本和開發可行性，了解常見的業務情境後，在介面與資料取用上提出執行方案。</span></div>
-                                <div class="pup_normal_text" style="margin-bottom:0px;">因福利項目各有不同，申請表單內容會有所差異。</div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -167,7 +166,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">為使管理員能有彈性的設置表單，於後台製作功能介面給予操作。</span><br/><span class="pup_normal_text_small">*設置後的表單欄位，除前台也同步顯示於後台。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">為能有彈性的設置表單，於後台製作功能介面給予操作。</span><br/><span class="pup_normal_text_small">*設置後的表單欄位，除前台之外，也同步顯示於後台。</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -186,15 +185,15 @@
                                 <div style="margin-top:0px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span>B2_4新增表單欄位-彈跳視窗(欄位模板)</span>
+                                            <span style="position:relative;top:-5px;">B2_4新增表單欄位-彈跳視窗<br/>可以選擇欄位的輸入框類型、排序、是否必填和輸入欄位名稱、備住，以達彈性設置表單之需求。</span>
                                             <img src="images/yulon_pic_9-14.png" style="max-width:100%">
                                         </div>
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span>B2_4新增表單欄位-彈跳視窗(輸入文字、輸入數字)</span>
+                                            <span>B2_4新增表單欄位-彈跳視窗(欄位類型：輸入文字、輸入數字)</span>
                                             <img src="images/yulon_pic_9-15.png" style="max-width:100%">
                                         </div>
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span>B2_4新增表單欄位-彈跳視窗(下拉選單、單選選項、複選選項)</span>
+                                            <span>B2_4新增表單欄位-彈跳視窗(欄位類型：下拉選單、單選選項、複選選項)</span>
                                             <img src="images/yulon_pic_9-17.png" style="max-width:100%">
                                         </div>
                                     </div>
@@ -203,7 +202,7 @@
                                 <div style="margin-top:0px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span>B2_5設置表單欄位-彈跳視窗</span>
+                                            <span style="position:relative;top:-5px;">B2_5設置表單欄位-彈跳視窗<br/>對於常用的欄位項目，透過程式開發檢核輸入資料的功能，以模組化方式套用欄位，完善申請表單的操作機制(防錯)。</span>
                                             <img src="images/yulon_pic_9-19.png" style="max-width:100%">
                                         </div>
                                     </div>
