--- a/uiux_index.html
+++ b/uiux_index.html
@@ -91,7 +91,9 @@
             $(".sino_works_6_btn").click(function() {
                 $(".sino_works_6_pup,.pup_bg_transparent").fadeIn(500);
             });
-
+            $(".sino_works_7_btn").click(function() {
+                $(".sino_works_7_pup,.pup_bg_transparent").fadeIn(500);
+            });
             $(".yuanta_info_btn").click(function() {
                 $(".yuanta_info_pup,.pup_bg").fadeIn(500);
             });
@@ -924,8 +926,8 @@
                                 <span class="sino_works_5_btn">用戶原型-桌機(figma)</span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a href="sino_works_5.html">實行性原型(前端切版)</a></span>
+                                <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
+                                <span class="disabled_link sino_works_7_btn">實行性原型(前端切版)</span>
                             </div>
                         </div>
                         <div class="work_info_subpart">
@@ -1667,6 +1669,20 @@
 
     </div>
     <!-- ... 永豐網路投保 用戶原型選項 end ... -->
+    <!-- ... 永豐網路投保 預計上線說明  ... -->
+    <div class="pup_window_small sino_works_7_pup" style="display:none;">
+        <div class="pup_close_btn set_middle pup_close_icon" role="button">
+
+        </div>
+        <div class="pup_window_small_title_container">
+            <div class="pup_window_small_title emphasize_text">投保網站&nbsp;實行性原型(前端切版)</div>
+        </div>
+        <div class="pup_window_small_content">
+            目前仍在編寫「切版製作」說明，<br/>將於1/14上線展示，期望您的耐心等候。
+        </div>
+
+    </div>
+    <!-- ... 永豐網路投保 預計上線說明 end ... -->
 
 </body>
 
