--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -147,7 +147,7 @@
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;"><span>針對福利項目，有彈性設置申請表單。</span></div>
-                                <div class="pup_normal_text" style="margin-bottom:20px;"><span>為滿足這方面需求，並降低製作成本和開發可行性，了解常見的業務情境後，在介面與資料取用上提出執行方案。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:20px;"><span>因福利項目不同，申請所需填寫的資料也有所差異，<br/>為滿足這方面需求，並降低製作成本和開發可行性，了解常見的業務情境後，在介面與資料取用上提出執行方案。</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -202,7 +202,7 @@
                                 <div style="margin-top:0px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span style="position:relative;top:-5px;">B2_5設置表單欄位-彈跳視窗<br/>對於常用的欄位項目，透過程式開發檢核輸入資料的功能，以模組化方式套用欄位，完善申請表單的操作機制(防錯)。</span>
+                                            <span style="position:relative;top:-5px;">B2_5設置表單欄位-彈跳視窗<br/>對於常用的欄位項目，透過程式開發「檢核輸入資料」功能，以模組化方式套用欄位，完善申請表單的操作機制(防錯)。</span>
                                             <img src="images/yulon_pic_9-19.png" style="max-width:100%">
                                         </div>
                                     </div>
