--- a/uiux_index.html
+++ b/uiux_index.html
@@ -939,7 +939,7 @@
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a href="sino_works_6.html">測試報告</a></span>
+                                <span><a href="sino_works_6.html">執行內容</a></span>
                             </div>
                         </div>
                     </div>
