--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -100,7 +100,7 @@
                                 <div class="pup_content_text" style="margin-top:10px;padding-left:0px;">
                                     <div class="text_row">
                                         <div class="text_item">
-                                            <div class="text_item_title h6">並根據目標客群條件，制定招募問卷進行測試者招募。</div>
+                                            <div class="text_item_title h6">並根據目標客群條件，制定招募問卷進行受測者招募。</div>
                                         </div>
 
                                     </div>
@@ -115,8 +115,8 @@
                                     <div class="text_row">
                                         <div class="text_item">
                                             <ul class="text_item_list" style="list-style:decimal">
-                                                <li>讓測試者填寫問卷，了解背景資料，並訪談相關產品的使用經驗和習慣。</li>
-                                                <li><span class="emphasize_text">向測試者描述故事情境</span>。<br />如：您明天將搭乘早上10點的航班，前往日本為期5天的自助旅遊行程，還未投保旅遊平安保險的您，<br />想起先前收到永豐會員電子郵件，提到永豐銀行有網路投保服務，因此從手機透過郵件中連結進入到網站，嘗試投保旅遊平安保險。</li>
+                                                <li>讓受測者填寫問卷，了解背景資料，並訪談相關產品的使用經驗和習慣。</li>
+                                                <li><span class="emphasize_text">向受測者描述故事情境</span>。<br />如：您明天將搭乘早上10點的航班，前往日本為期5天的自助旅遊行程，還未投保旅遊平安保險的您，<br />想起先前收到永豐會員電子郵件，提到永豐銀行有網路投保服務，因此從手機透過郵件中連結進入到網站，嘗試投保旅遊平安保險。</li>
                                                 <li>mobile&nbsp;first為原則，優先以手機裝置進行測試。</li>
                                             </ul>
                                         </div>
@@ -126,29 +126,30 @@
                         </div>
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;padding-left:0px;">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">測試方式</div>
+                                <div class="part_title h5 font_bold emphasize_text">進行測試</div>
                                 <div class="pup_content_text" style="margin-top:10px;padding-left:0px;">
                                     <div class="text_row">
                                         <div class="text_item">
                                             <div class="text_item_title h6">執行步驟</div>
                                             <ul class="text_item_list" style="list-style:decimal">
-                                                <li>由訪談人員(主訪)以網頁模擬手機裝置尺寸進行操作，並分享螢幕畫面給予測試者。</li>
-                                                <li>對測試者說明「請把我當作您的手，告訴我根據根據您所看到的畫面，想如何點擊操作。」隨著操作進程引導測試者，說出他所看和想執行的行為。</li>
-                                                <li>由訪談人員(副訪)紀錄過程中，測試者的情緒反應(猶豫、驚訝...等)。</li>
+                                                <li>由測試人員(主訪)以網頁模擬手機裝置尺寸進行操作，並分享螢幕畫面給予受測者。</li>
+                                                <li>對受測者說明「請把我當作您的手，告訴我根據根據您所看到的畫面，想如何點擊操作。」隨著操作進程引導受測者，說出他所看和想執行的行為。</li>
+                                                <li>由測試人員(副訪)紀錄過程中，受測者的情緒反應(猶豫、驚訝...等)。</li>
                                                 <li>操作關鍵的介面物件前，如：選單，則詢問預期大致會有怎樣的選項；按鈕，則詢問預期點擊後會執行什麼功能。</li>
-                                                <li>達成使用目標(完成投保)後，依操作流程進行複盤。</li>
+                                                <li>達成使用目標(完成投保)後，依操作流程與受測者進行複盤。</li>
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="text_row">
+                                    <div class="text_row" style="margin-top:10px;">
                                         <div class="text_item">
-                                            <div class="text_item_title h6">複盤測試者要點</div>
+                                            <div class="text_item_title h6">複盤成果</div>
                                             <ul class="text_item_list" style="list-style:disc">
-                                                <li>哪些被忽略的介面物件是否受到注意。</li>
-                                                <li>哪個操作點發生卡頓的原因。</li>
-                                                <li>流程中每個步驟的感受。</li>
-                                                <li>達成使用目標後的心得。</li>
-                                                <li>如果有改善建議哪些介面需調整和原因。</li>
+                                                <li>哪些操作點，使受測者的產生情緒反應(猶豫、驚訝...等)詢問其原因。</li>
+                                                <li>哪些操作點，使受測者停滯詢問其原因。</li>
+                                                <li>哪些被忽略的介面物件，受測者是否有注意到。</li>
+                                                <li>流程中每個步驟，受測者的操作感受。</li>
+                                                <li>達成使用目標後，受測者的操作心得。</li>
+                                                <li>如果受測者有改善建議，哪些介面需調整和原因。</li>
                                             </ul>
                                         </div>
                                     </div>
