--- a/uiux_index.html
+++ b/uiux_index.html
@@ -654,8 +654,8 @@
 
                     <div class="info_work_progress_item">
                         <div class="progress_item progress_small_item">
-                            <div class="progress_item_time font_bold">2013/01</div>
-                            <div class="progress_item_content"><span class="font_bold">銘傳大學&nbsp;數位媒體設計系</span>畢業</div>
+                            <div class="progress_item_time font_bold"><span>2013.05&nbsp;-&nbsp;2014.05</span><br/>平面設計</div>
+                            <div class="progress_item_content"><span class="font_bold">多媒體、行銷公司任職</span>，製作網路行銷的活動網頁、廣告Banner。</div>
                             <div class="progress_item_spot progress_small_item_spot spot_left set_middle">
                                 <div>
                                     <img src="images/small_item_spot_icon.png" alt="紙飛機圖案">
@@ -680,9 +680,9 @@
                             <div class="left_line_large"></div>
                         </div>
                         <div class="progress_item progress_medium_item progress_medium_item_right_padding">
-                            <div class="progress_item_time font_bold">2013.05 - 2014.05</div>
+                            <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.03</span><br/>網頁設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">多媒體、行銷公司任職</span>，製作網路行銷的活動網頁、廣告Banner。
+                                <span class="font_bold">網站製作公司任職</span>，負責網站視覺設計，接續前端切版和維運更新。
                             </div>
                             <div class="progress_item_spot progress_medium_item_spot spot_right set_middle">
                                 <div>
@@ -702,9 +702,15 @@
 
                     <div class="info_work_progress_item">
                         <div class="progress_item progress_medium_item progress_medium_item_left_padding">
-                            <div class="progress_item_time font_bold">2014.05 - 2016.03</div>
+                            <div class="progress_item_time font_bold"><span>2016.04&nbsp;-&nbsp;2021.02</span><br/>產品設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">網站設計公司任職</span>，負責網站視覺設計，接續前端切版和維運更新。
+                                <span class="font_bold">教育類科技公司任職</span>，負責將國、高中紙本教材轉為數位產品。
+                            </div>
+                            <div class="progress_item_content" style="margin-top:3px;">
+                                <ul style="list-style:disc;padding-left:23px;">
+                                    <li style="margin-bottom:3px;">設計影音解答題本的活動網站，以考前猜題吸引學生註冊，除註冊資料外，並以GA、GTM收集數據；業務經理反饋對產品銷售有很大幫助。</li>
+                                    <li>設計人資單位、家教部管理後台，皆有正面評價。</li>
+                                </ul>
                             </div>
                             <div class="progress_item_spot progress_medium_item_spot spot_left set_middle">
                                 <div>
@@ -730,9 +736,14 @@
 
                         </div>
                         <div class="progress_item progress_large_item progress_large_item_right_padding">
-                            <div class="progress_item_time font_bold">2016.04 - 2024.05</div>
+                            <div class="progress_item_time font_bold"><span>2021.03&nbsp;-&nbsp;2024.05</span><br/>UI.UX設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">教育類科技公司、系統開發商任職</span>，協助規劃網站、APP、行銷網頁，處理介面、視覺設計和前端切版。
+                                <span class="font_bold">系統開發商任職</span>，規劃網站、APP、行銷網頁，處理介面、視覺設計和前端切版。
+                            </div>
+                            <div class="progress_item_content" style="margin-top:3px;">
+                                <ul style="list-style:disc;padding-left:23px;">
+                                    <li>專案客戶皆為集團級企業。</li>
+                                </ul>
                             </div>
                             <div class="progress_item_spot progress_large_item_spot spot_right set_middle">
                                 <div>
@@ -1678,7 +1689,7 @@
             <div class="pup_window_small_title emphasize_text">投保網站&nbsp;實行性原型(前端切版)</div>
         </div>
         <div class="pup_window_small_content">
-            目前仍在編寫「切版製作」說明，<br/>將於1/14上線展示，期望您的耐心等候。
+            目前仍在編寫「切版製作」說明，<br />將於1/14上線展示，期望您的耐心等候。
         </div>
 
     </div>
